# SFML_CMAKE_TEST

./: CMakeLists.txt  CMakeSettings.json
.github/workflows/: ci.yml
assets/binds/: Config.txt
assets/sprites/: Chel.txt
assets/textures/bins/: Player.xcf
include/: action.hpp  actionManager.hpp  assetLoader.hpp  bindLoader.hpp  config.hpp  game.hpp  player.hpp  spriteLoader.hpp  textureLoader.hpp
src/: CMakeLists.txt  actionManager.cpp  bindLoader.cpp  game.cpp  main.cpp  player.cpp  spriteLoader.cpp  textureLoader.cpp
src/hello/: CMakeLists.txt  hello.cpp  hello.hpp
